--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Log your running and cycling workouts on an interactive map. Built with JavaScript, OOP, and Leaflet.js."
     />
     <meta property="og:image" content="images/mapty-preview.png" />
-    <meta property="og:url" content="https://mapty-app.vercel.app" />
+    <meta property="og:url" content="https://mapty-project-app.vercel.app" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
